add knowledge python lecture-5 about pandas and seaborn

--- a/knowledge_to_python/seminar-10/Task-addictionally.ipynb
+++ b/knowledge_to_python/seminar-10/Task-addictionally.ipynb
@@ -91,24 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "columns cannot be a set",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mDataFrame(random\u001b[39m.\u001b[39;49msample([\u001b[39m'\u001b[39;49m\u001b[39mblack\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mwhite\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m*\u001b[39;49m\u001b[39m10\u001b[39;49m, \u001b[39m20\u001b[39;49m) ,columns\u001b[39m=\u001b[39;49m{\u001b[39m'\u001b[39;49m\u001b[39mColors\u001b[39;49m\u001b[39m'\u001b[39;49m})\n",
-      "File \u001b[1;32mc:\\Users\\Kalmy\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:675\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    673\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mindex cannot be a set\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    674\u001b[0m \u001b[39mif\u001b[39;00m columns \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(columns, \u001b[39mset\u001b[39m):\n\u001b[1;32m--> 675\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mcolumns cannot be a set\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    677\u001b[0m \u001b[39mif\u001b[39;00m copy \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    678\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, \u001b[39mdict\u001b[39m):\n\u001b[0;32m    679\u001b[0m         \u001b[39m# retain pre-GH#38939 default behavior\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: columns cannot be a set"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['whoAmI'], dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.DataFrame(random.sample(['black', 'white']*10, 20) ,columns={'Colors'})\n"
+    "data.columns"
    ]
   }
  ],
